--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile files('libs/okhttp-2.3.0.jar')
     compile files('libs/butterknife-7.0.1.jar')
-    compile files('libs/butterknife-5.1.2.jar')
+   // compile files('libs/butterknife-5.1.2.jar')
     compile files('libs/okio-1.0.1.jar')
+    compile project(':okhttp-master')
+    compile project(':okhttpfinal-dm')
 }
